# uc_helper_rust

./: .env.example  .gitignore  .travis.yml  Cargo.toml  README.md  faq.json
profiles/: debug.json
src/: database.rs  discord.rs  lib.rs  main.rs  settings.rs  tenchi.rs  tests.rs  tetrio.rs
src/commands/: global.rs  mod.rs  owner.rs  player.rs  staff.rs  tournament.rs
src/connections/: mod.rs  sheet.rs
src/database/: discord.rs  mod.rs  players.rs  registration.rs  tournament.rs  tournaments.rs
src/discord/: bot.rs  general.rs  mod.rs  registration.rs  tetrio.rs  tournament.rs
src/tetrio/: announcement_day.rs  database.rs  leaderboard.rs  mod.rs  news.rs  tenchi.rs  user.rs
