[package]
name = "uc_helper_rust"
version = "0.1.0"
authors = ["IceDynamix <22303902+IceDynamix@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = {version = "0.10.9", features = ["json"]}
# version required for reqwest
tokio = {version = "0.2", features = ["signal"]}

serenity = "0.9.2"
dotenv = "0.15.0"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"

mongodb = "1.1.1"
chrono = "0.4.19"
